# MyObsStudio

./: .gitignore  CMakeLists.txt  MyCmake.rar
MyTest/Dx11Demo/: CMakeLists.txt  main.cpp
MyTest/OpenGL-DXGI/Demo2/: CMakeLists.txt  dxgl.c  main.cpp
MyTest/OpenGL/Win32OpenGL/: CMakeLists.txt  main.cpp
MyTest/SharedTexture/: CMakeLists.txt  assets.cpp  console.cpp  d3d.cpp  d3d11.cpp  d3d11.h  main.cpp  platform.h  queue.cpp  renderer.cpp  renderer11.cpp  renderer9.cpp  scene.h
MyTest/ffmpeg/outfile/: CMakeLists.txt  main.cpp
UI/: CMakeLists.txt  adv-audio-control.cpp  adv-audio-control.hpp  api-interface.cpp  audio-encoders.cpp  balance-slider.hpp  clickable-label.hpp  expand-checkbox.hpp  horizontal-scroll-area.hpp  hotkey-edit.cpp  hotkey-edit.hpp  item-widget-helpers.hpp  locked-checkbox.cpp  locked-checkbox.hpp  obs-app.cpp  obs-app.hpp  platform-osx.mm  platform-windows.cpp  platform.hpp  properties-view.cpp  qt-display.cpp  qt-display.hpp  qt-wrappers.cpp  qt-wrappers.hpp  remote-text.cpp  remote-text.hpp  slider-absoluteset-style.hpp  source-tree.cpp  source-tree.hpp  visibility-checkbox.cpp  visibility-item-widget.cpp  visibility-item-widget.hpp  volume-control.cpp  volume-control.hpp  window-basic-about.cpp  window-basic-about.hpp  window-basic-adv-audio.cpp  window-basic-auto-config-test.cpp  window-basic-auto-config.cpp  window-basic-auto-config.hpp  (+26 more)
UI/data/: locale.ini
UI/data/locale/: af-ZA.ini  ar-SA.ini  bg-BG.ini  bn-BD.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-US.ini  es-ES.ini  et-EE.ini  eu-ES.ini  fa-IR.ini  fi-FI.ini  fil-PH.ini  fr-FR.ini  gd-GB.ini  gl-ES.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  it-IT.ini  ja-JP.ini  ka-GE.ini  ko-KR.ini  lt-LT.ini  ms-MY.ini  nb-NO.ini  nl-NL.ini  nn-NO.ini  pl-PL.ini  pt-BR.ini  pt-PT.ini  ro-RO.ini  ru-RU.ini  sk-SK.ini  sl-SI.ini  sq-AL.ini  (+12 more)
UI/data/themes/: Acri.qss  Dark.qss  Default.qss  Rachni.qss
UI/forms/: AutoConfigStreamPage.ui  AutoConfigVideoPage.ui  ColorSelect.ui  OBSAbout.ui  OBSBasic.ui  OBSBasicFilters.ui  OBSBasicSettings.ui  OBSRemux.ui  OBSUpdate.ui  obs.qrc
UI/frontend-plugins/frontend-tools/: CMakeLists.txt  auto-scene-switcher-nix.cpp  captions-handler.cpp  captions-handler.hpp  captions-mssapi-stream.cpp  captions-mssapi-stream.hpp  captions-mssapi.cpp  captions-mssapi.hpp  captions.cpp  captions.hpp  frontend-tools.c  output-timer.cpp  scripts.cpp  scripts.hpp
UI/frontend-plugins/frontend-tools/forms/: captions.ui  output-timer.ui  scripts.ui
UI/installer/: mp-installer.nsi
UI/obs-frontend-api/: CMakeLists.txt  obs-frontend-api.cpp  obs-frontend-api.h  obs-frontend-internal.hpp
UI/win-update/: update-window.cpp  update-window.hpp  win-update-helpers.cpp  win-update-helpers.hpp  win-update.cpp  win-update.hpp
UI/win-update/updater/: CMakeLists.txt  hash.cpp  http.cpp  patch.cpp  resource.h  updater.cpp  updater.hpp  updater.rc
libobs/: CMakeLists.txt  libobs.pc.in  obs-audio-controls.c  obs-audio-controls.h  obs-audio.c  obs-cocoa.c  obs-config.h  obs-data.c  obs-data.h  obs-display.c  obs-encoder.c  obs-encoder.h  obs-ffmpeg-compat.h  obs-hotkey.c  obs-hotkey.h  obs-hotkeys.h  obs-internal.h  obs-module.c  obs-module.h  obs-nix.c  obs-output.c  obs-output.h  obs-properties.c  obs-properties.h  obs-scene.c  obs-scene.h  obs-service.c  obs-service.h  obs-source-deinterlace.c  obs-source-transition.c  obs-source.c  obs-source.h  obs-ui.h  obs-video.c  obs-win-crash-handler.c  obs-windows.c  obs.c  obs.h  obs.hpp  obsconfig.h.in
libobs/audio-monitoring/osx/: coreaudio-enum-devices.c  coreaudio-output.c  mac-helpers.h
libobs/audio-monitoring/pulse/: pulseaudio-enum-devices.c  pulseaudio-output.c  pulseaudio-wrapper.c  pulseaudio-wrapper.h
libobs/audio-monitoring/win32/: wasapi-enum-devices.c  wasapi-output.c  wasapi-output.h
libobs/callback/: calldata.h  decl.c  decl.h  signal.c  signal.h
libobs/data/: format_conversion.effect
libobs/graphics/: effect-parser.c  effect-parser.h  effect.c  effect.h  graphics-ffmpeg.c  graphics-imports.c  graphics-internal.h  graphics-magick.c  graphics.c  graphics.h  image-file.c  image-file.h  shader-parser.c  shader-parser.h
libobs/media-io/: audio-io.h  audio-resampler-ffmpeg.c  format-conversion.c  media-remux.c  video-io.c  video-io.h
libobs/util/: base.h  c99defs.h  cf-lexer.c  cf-lexer.h  circlebuf.h  config-file.c  config-file.h  darray.h  dstr.c  pipe-windows.c  platform-cocoa.m  platform-nix.c  platform-windows.c  platform.c  platform.h  profiler.c  text-lookup.h  threading-posix.c  threading.h  utf8.c  util.hpp
libobs/util/apple/: cfstring-utils.h
libobs/util/vc/: vc_stdint.h
libobs/util/windows/: win-registry.h
plugins/obs-ffmpeg/: CMakeLists.txt  dynlink_cuda.h  nvEncodeAPI.h  obs-ffmpeg-audio-encoders.c  obs-ffmpeg-compat.h  obs-ffmpeg-mux.c  obs-ffmpeg-nvenc.c  obs-ffmpeg-output.c  obs-ffmpeg-source.c  obs-ffmpeg-vaapi.c  obs-ffmpeg.c
plugins/obs-ffmpeg/data/locale/: ar-SA.ini  bn-BD.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  (+34 more)
plugins/obs-ffmpeg/ffmpeg-mux/: CMakeLists.txt  ffmpeg-mux.c
plugins/obs-libfdk/: CMakeLists.txt  obs-libfdk.c
plugins/obs-text/: CMakeLists.txt
plugins/obs-text/gdiplus/: obs-text.cpp
plugins/obs-vst/: CMakeLists.txt
plugins/rtmp-services/: CMakeLists.txt  lookup-config.h.in  rtmp-common.c  rtmp-services-main.c  twitch.c  twitch.h
plugins/rtmp-services/data/: package.json  services.json
plugins/win-capture/: CMakeLists.txt  cursor-capture.c  dc-capture.c  dc-capture.h  game-capture.c  graphics-hook-info.h  load-graphics-offsets.c  nt-stuff.h  plugin-main.c  window-capture.c  window-helpers.c
plugins/win-capture/get-graphics-offsets/: CMakeLists.txt  d3d9-offsets.cpp
plugins/win-capture/graphics-hook/: CMakeLists.txt  d3d10-capture.cpp  d3d11-capture.cpp  d3d8-capture.cpp  d3d9-capture.cpp  dxgi-capture.cpp  gl-capture.c  graphics-hook.c
plugins/win-capture/inject-helper/: CMakeLists.txt
plugins/win-dshow/: CMakeLists.txt  dshow-plugin.cpp  ffmpeg-decode.c  win-dshow.cpp
test/win/: CMakeLists.txt  test.cpp
(+809 files in other folders)
